Remove craftbukkit dependency in 'ShopChest' artifact